force-app/main/default/objects/Transfer__c/fields/Approval_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Request_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Approval Request Date</label>
    <type>Date</type>
</CustomField>