force-app/main/default/objects/Transfer__c/fields/Approval_Stage__c.field-meta.xml
<CustomField>
    <fullName>Approval_Stage__c</fullName>
    <label>Approval Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Transfer_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Current Manager Approval</fullName>
            </value>
            <value>
                <fullName>Approved by Current Manager</fullName>
            </value>
            <value>
                <fullName>Awaiting New Club Manager Approval</fullName>
            </value>
            <value>
                <fullName>Approved by New Club Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>