force-app/main/default/objects/Transfer__c/fields/Current_Club__c.field-meta.xml
<CustomField>
    <fullName>Current_Club__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Club</label>
    <referenceTo>Club__c</referenceTo>
    <relationshipLabel>Transfers (Current Club)</relationshipLabel>
    <relationshipName>Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>