force-app/main/default/objects/Transfer__c/fields/Current_Club_Manager__c.field-meta.xml
<CustomField>
    <fullName>Current_Club_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Club Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>