force-app/main/default/objects/Transfer__c/fields/New_Club__c.field-meta.xml
<CustomField>
    <fullName>New_Club__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Club</label>
    <referenceTo>Club__c</referenceTo>
    <relationshipLabel>Transfers (New Club)</relationshipLabel>
    <relationshipName>Transfers1</relationshipName>
    <type>Lookup</type>
</CustomField>