force-app/main/default/objects/Transfer__c/fields/New_Club_Manager__c.field-meta.xml
<CustomField>
    <fullName>New_Club_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Club Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transfers1</relationshipName>
    <type>Lookup</type>
</CustomField>