force-app/main/default/objects/Transfer__c/fields/Transfer_Fee__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Fee__c</fullName>
    <label>Transfer Fee</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>