force-app/main/default/objects/Transfer__c/fields/Transfer_Type__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Type__c</fullName>
    <label>Transfer Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Club Transfer</fullName>
                <default>true</default>
                <label>Club Transfer</label>
            </value>
            <value>
                <fullName>Player Release</fullName>
            </value>
            <value>
                <fullName>Free Agent Signing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>