force-app/main/default/objects/Transfer__c/validationRules/Player_Associated_With_A_Club.validationRule-meta.xml
<ValidationRule>
    <fullName>Player_Associated_With_A_Club</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),
  AND(
    ISPICKVAL(Transfer_Type__c, &apos;Free Agent Signing&apos;),
    NOT(ISBLANK( Current_Club__c )) 
  )
)</errorConditionFormula>
    <errorDisplayField>Transfer_Type__c</errorDisplayField>
    <errorMessage>Player is Associated With a Club</errorMessage>
</ValidationRule>