force-app/main/default/objects/Transfer__c/validationRules/Player_Without_Club.validationRule-meta.xml
<ValidationRule>
    <fullName>Player_Without_Club</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),
  AND(
    OR(
      ISPICKVAL(Transfer_Type__c, &apos;Club Transfer&apos;),
      ISPICKVAL(Transfer_Type__c, &apos;Player Release&apos;)
    ),
    ISBLANK(Player__r.Club__c)
  )
)</errorConditionFormula>
    <errorDisplayField>Transfer_Type__c</errorDisplayField>
    <errorMessage>Player is a Free Agent</errorMessage>
</ValidationRule>