force-app/main/default/objects/Transfer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Player__c</columns>
    <columns>Transfer_Type__c</columns>
    <columns>New_Club__c</columns>
    <columns>Transfer_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>